--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -14,22 +14,22 @@
     <header>
         <!-- top navbar -->
         <nav class="teal darken-1">
-            <div class="nav-wrapper">
-              <a href="#!" class="brand-logo">Task Manager</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fa-solid fa-bar">menu</i></a>
-              <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="">New Task</a></li>
-                <li><a href="">Categories</a></li>
-              </ul>
-            </div>
-          </nav>
+          <div class="nav-wrapper">
+            <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="{{ url_for('home') }}">Home</a></li>
+              <li><a href="">New Task</a></li>
+              <li><a href="{{ url_for('categories') }}">Categories</a></li>
+            </ul>
+          </div>
+        </nav>
         
         <!-- mobile sidenav-->
           <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="">New Task</a></li>
-            <li><a href="">Categories</a></li>
+            <li><a href="{{ url_for('categories') }}">Categories</a></li>
           </ul>
     </header>
 
