--- a/taskmanager/templates/edit_task.html
+++ b/taskmanager/templates/edit_task.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="teal-text text darken-4 center-align">Add Task</h3>
+<h3 class="teal-text text darken-4 center-align">Edit Task</h3>
 
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+    <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task.id) }}">
         <!-- task name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix teal-text text-darken-4"></i>
-                <input id="task_name" name="task_name" minlength="3" maxlength="25" type="text" class="validate">
+                <input id="task_name" name="task_name" value="{{ task.task_name }}" minlength="3" maxlength="25"
+                    type="text" class="validate">
                 <label for="task_name">Task Name</label>
             </div>
         </div>
@@ -18,7 +19,9 @@
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix teal-text text-darken-4"></i>
                 <textarea id="task_desciption" name="task_desciption" minlength="5" maxlength="200" type="text"
-                    class="materialize-textarea validate" required></textarea>
+                    class="materialize-textarea validate" required>
+                    {{- task.task_desciption -}}
+                </textarea>
                 <label for="task_desciption">Task Description</label>
             </div>
         </div>
@@ -26,7 +29,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calender-alt prefix teal-text text-darken-4"></i>
-                <input id="due_date" name="due_date" type="text" class="datepicker validate">
+                <input id="due_date" name="due_date" type="text" value="{{ task.due_date.strftime('%d %B, %Y') }}"
+                    class="datepicker validate">
                 <label for="due_date">Due Date</label>
             </div>
         </div>
@@ -36,8 +40,12 @@
                 <div class="switch">
                     <i class="fas fa-exclamation-circle prefix teal-text text-darken-4"></i>
                     <label for="is_urgent">
+                        {% if task.is_urgent == True %}
+                        <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                        {% else %}
                         <input id="is_urgent" name="is_urgent" type="checkbox">
-                        <span class="lever"></span>                        
+                        {% endif %}
+                        <span class="lever"></span>
                         Is Urgent
                     </label>
                 </div>
@@ -48,9 +56,13 @@
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix teal-text text-darken-4"></i>
                 <select id="category_id" name="category_id" class="validate" required>
-                    <option value="" disabled selected>Choose Category</option>
+                    <option value="" disabled>Choose Category</option>
                     {% for category in categories %}
-                        <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% if category == task.category %}
+                            <option value="{{ category.id }}" selected>{{ category.category_name }}</option>
+                        {% else %}
+                            <option value="{{ category.id }}">{{ category.category_name }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
                 <label for="category_id">Category</label>
@@ -60,7 +72,7 @@
         <div class="row">
             <div class="center-align col s12">
                 <button type="submit" class="btn-large teal darken-1">
-                    Add Task <i class="fas fa-plus-square right"></i>
+                    Edit Task <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
         </div>
